force-app/main/default/objects/Template_task__c/Template_task__c.object-meta.xml
<CustomObject>
    <description>This is suppose to represent the steps that comprise under templates for the different roles that Mainlydigital are recruiting for. Each new Mainlydigital employee must carry out these steps within this object to pass probation.</description>
    <label>Template task</label>
    <nameField>
        <label>Template task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>