force-app/main/default/objects/Template_task__c/fields/Relative_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Relative_Days_to_Complete__c</fullName>
    <description>The assigned amount of days given to each candidate to complete onboarding task.</description>
    <label>Relative Days to Complete</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>