force-app/main/default/objects/Template_task__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Required tasks that each Mainlydigital candidate must complete within a certain amount of time to pass their probation</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>