force-app/main/default/objects/Template_task__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Name of the onboarding template</description>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template tasks</relationshipLabel>
    <relationshipName>Template_tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>