force-app/main/default/objects/Template_task__c/validationRules/Relative_days_to_complete_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Relative_days_to_complete_restriction</fullName>
    <active>true</active>
    <description>This ensures that the days set for task completion aren&apos;t less than a day. It also puts a restriction on the maximum days required to complete the task, which i gave an estimate of a 6 months probation period.</description>
    <errorConditionFormula>OR( Relative_Days_to_Complete__c &lt; 1, Relative_Days_to_Complete__c &gt; 182)</errorConditionFormula>
    <errorMessage>Relative days to complete cannot be set to less than a day or exceed six months.</errorMessage>
</ValidationRule>